--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Battle Game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
 <body>
 
 
+<script src="./scripts/main.js"> </script>
 
 </body>
 
