--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 
 <body>
+    <select id='elements' placeholder="Choose an element.">
+        <option class='element' value="water">Water</option>
+        <option class='element' value="earth">Earth</option>
+        <option class='element' value="fire">Fire</option>
+        <option class='element' value="air">Air</option>
+    </select>
 
 
 <script src="./scripts/main.js"> </script>
