added nav bar & main container to html

--- a/index.html
+++ b/index.html
@@ -11,16 +11,26 @@
 </head>
 
 <body>
+
+<header class="main-nav-bar">
     <select id='elements' placeholder="Choose an element.">
         <option class='element' value="water">Water</option>
         <option class='element' value="earth">Earth</option>
         <option class='element' value="fire">Fire</option>
         <option class='element' value="air">Air</option>
     </select>
+</header>
+=======
 
+
+<div class="container"> <!-- container start  -->
+
+
+</div> <!-- container end  -->
 
 <script src="./scripts/main.js"> </script>
-
 </body>
 
 </html>
+
+<!--  -->
