button added for Eric

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 <div class="container"> <!-- container start  -->
 
+<button type="button" name="attack" class="attack-button">Attack!</button>
 
 </div> <!-- container end  -->
 
