--- a/index.html
+++ b/index.html
@@ -7,29 +7,30 @@
     <title>Battle Game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-        <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
 <body>
 
-<header class="main-nav-bar">
-    <select id='elements' placeholder="Choose an element.">
-        <option class='element' value="water">Water</option>
-        <option class='element' value="earth">Earth</option>
-        <option class='element' value="fire">Fire</option>
-        <option class='element' value="air">Air</option>
-    </select>
-</header>
-=======
+    <header class="main-nav-bar">
+        <select id='elements' placeholder="Choose an element." onchange="">
+            <option class='element' value="water">Water</option>
+            <option class='element' value="earth">Earth</option>
+            <option class='element' value="fire">Fire</option>
+            <option class='element' value="air">Air</option>
+        </select>
+    </header>
+    =======
 
 
-<div class="container"> <!-- container start  -->
+    <div class="container">
+        <!-- container start  -->
 
-<button type="button" name="attack" class="attack-button">Attack!</button>
+        <button type="button" name="attack" class="attack-button">Attack!</button>
 
-</div> <!-- container end  -->
+    </div> <!-- container end  -->
 
-<script src="./scripts/main.js"> </script>
+    <script src="./scripts/main.js"> </script>
 </body>
 
 </html>
