Changed the select element tags.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
 
     <header class="main-nav-bar">
-        <select id='elements' placeholder="Choose an element." onchange="">
+        <select id='elements'>
+            <option class='element' value="">Choose an element.</option>
             <option class='element' value="water">Water</option>
             <option class='element' value="earth">Earth</option>
             <option class='element' value="fire">Fire</option>
