--- a/index.html
+++ b/index.html
@@ -31,17 +31,18 @@
     <div class="container">
         <!-- container start -->
         <div class="row align-items-center player-cards">
-<<<<<<< HEAD
+
             <div class="card col-12 col-md-4 text-center mt-4">
                 <div class="card col-12 col-md-6 text-center player-card">
                     <!-- <img src="..." class="card-img-top" alt="..."> -->
                     <div class="card-body player-card-body">
                         <h5 class="card-title">Player Name(this is where we'll use handlbars) </h5>
                         <p class="card-text">This is where we will write what the player's attack was</p>
-                        <div class="progress">
+                        <div class="player-hp-status"></div>
+                        <!-- <div class="progress">
                             <div class="progress-bar player-hp" role="progressbar" style="width: 25%;"
                                 aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-                        </div>
+                        </div> -->
                         <button type="button" name="attack" class="attack-button">Attack!</button>
                     </div>
                 </div>
@@ -60,41 +61,20 @@
                 </div>
 
             </div>
-
+            <button type="button" name="button" class ="reset">Play Again</button>
         </div> <!-- container end -->
-=======
-          <!-- <div class="card col-12 col-md-4 text-center mt-4"> -->
-          <div class="card col-12 col-md-6 text-center player-card">
-            <!-- <img src="..." class="card-img-top" alt="..."> -->
-            <div class="card-body player-card-body">
-              <h5 class="card-title">Player Name(this is where we'll use handlbars) </h5>
-              <p class="card-text">This is where we will write what the player's attack was</p>
-              <div class="progress">
-                <div class="progress-bar player-hp" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-              </div>
-              <button type="button" name="attack" class="attack-button">Attack!</button>
-            </div>
-          </div>
 
-          <div class="card col-12 col-md-6 text-center player-card">
-            <!-- <img src="..." class="card-img-top" alt="..."> -->
-            <div class="card-body comp-card-body">
-              <h5 class="card-title">Computer Name(possibly change name depending on random #?) </h5>
-              <p class="card-text">This is where we will write what the computer's attack was</p>
-              <div class="progress">
-                <div class="progress-bar computer-hp" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-              </div>
-              <button type="button" name="placeholder" class="">This is a placeholder</button>
-            </div>
-          </div>
 
-        </div>
-<button type="button" name="button" class ="reset">Play Again</button>
-    </div> <!-- container end  -->
->>>>>>> ab7509b (updated element selector)
 
-        <script src='./scripts/char-types.js'></script>
-        <script src="./scripts/main.js"> </script>
+
+    <script id="playerhpbar-template" type="text/x-handlebars-template">
+          <div class="progress-bar computer-hp" role="progressbar" style="width: {{playerhp}}%;" aria-valuenow="{{playerhp}}" aria-valuemin="0" aria-valuemax="100">25%</div>
+       </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+      <script src="./scripts/handlebars-pg.js"> </script>
+       <script src="./scripts/char-types.js"> </script>
+       <script src="./scripts/main.js"> </script>
 
 
 
