Added some handlebars code in the JS.

--- a/index.html
+++ b/index.html
@@ -31,70 +31,39 @@
     <div class="container">
         <!-- container start -->
         <div class="row align-items-center player-cards">
-<<<<<<< HEAD
-            <div class="card col-12 col-md-4 text-center mt-4">
-                <div class="card col-12 col-md-6 text-center player-card">
-                    <!-- <img src="..." class="card-img-top" alt="..."> -->
-                    <div class="card-body player-card-body">
-                        <h5 class="card-title">Player Name(this is where we'll use handlbars) </h5>
-                        <p class="card-text">This is where we will write what the player's attack was</p>
-                        <div class="progress">
-                            <div class="progress-bar player-hp" role="progressbar" style="width: 25%;"
-                                aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-                        </div>
-                        <button type="button" name="attack" class="attack-button">Attack!</button>
+            <!-- <div class="card col-12 col-md-4 text-center mt-4"> -->
+            <div class="card col-12 col-md-6 text-center player-card">
+                <!-- <img src="..." class="card-img-top" alt="..."> -->
+                <div class="card-body player-card-body">
+                    <h5 class="card-title">Player Name(this is where we'll use handlbars) </h5>
+                    <p class="card-text">This is where we will write what the player's attack was</p>
+                    <div class="progress">
+                        <div class="progress-bar player-hp" role="progressbar" style="width: 25%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100">25%</div>
                     </div>
+                    <button type="button" name="attack" class="attack-button">Attack!</button>
                 </div>
+            </div>
 
-                <div class="card col-12 col-md-6 text-center player-card">
-                    <!-- <img src="..." class="card-img-top" alt="..."> -->
-                    <div class="card-body comp-card-body">
-                        <h5 class="card-title">Computer Name(possibly change name depending on random #?) </h5>
-                        <p class="card-text">This is where we will write what the computer's attack was</p>
-                        <div class="progress">
-                            <div class="progress-bar computer-hp" role="progressbar" style="width: 25%;"
-                                aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-                        </div>
-                        <button type="button" name="placeholder" class="">This is a placeholder</button>
+            <div class="card col-12 col-md-6 text-center player-card">
+                <!-- <img src="..." class="card-img-top" alt="..."> -->
+                <div class="card-body comp-card-body">
+                    <h5 class="card-title">Computer Name(possibly change name depending on random #?) </h5>
+                    <p class="card-text">This is where we will write what the computer's attack was</p>
+                    <div class="progress">
+                        <div class="progress-bar computer-hp" role="progressbar" style="width: 25%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100">25%</div>
                     </div>
+                    <button type="button" name="placeholder" class="">This is a placeholder</button>
                 </div>
-
             </div>
-
-        </div> <!-- container end -->
-=======
-          <!-- <div class="card col-12 col-md-4 text-center mt-4"> -->
-          <div class="card col-12 col-md-6 text-center player-card">
-            <!-- <img src="..." class="card-img-top" alt="..."> -->
-            <div class="card-body player-card-body">
-              <h5 class="card-title">Player Name(this is where we'll use handlbars) </h5>
-              <p class="card-text">This is where we will write what the player's attack was</p>
-              <div class="progress">
-                <div class="progress-bar player-hp" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-              </div>
-              <button type="button" name="attack" class="attack-button">Attack!</button>
-            </div>
-          </div>
-
-          <div class="card col-12 col-md-6 text-center player-card">
-            <!-- <img src="..." class="card-img-top" alt="..."> -->
-            <div class="card-body comp-card-body">
-              <h5 class="card-title">Computer Name(possibly change name depending on random #?) </h5>
-              <p class="card-text">This is where we will write what the computer's attack was</p>
-              <div class="progress">
-                <div class="progress-bar computer-hp" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-              </div>
-              <button type="button" name="placeholder" class="">This is a placeholder</button>
-            </div>
-          </div>
 
         </div>
-<button type="button" name="button" class ="reset">Play Again</button>
+        <button type="button" name="button" class="reset">Play Again</button>
     </div> <!-- container end  -->
->>>>>>> ab7509b (updated element selector)
 
-        <script src='./scripts/char-types.js'></script>
-        <script src="./scripts/main.js"> </script>
+    <script src='./scripts/char-types.js'></script>
+    <script src="./scripts/main.js"> </script>
 
 
 
