--- a/index.html
+++ b/index.html
@@ -34,41 +34,47 @@
 
             <div class="card col-12 col-md-4 text-center mt-4">
                 <div class="card col-12 col-md-6 text-center player-card">
-                    <!-- <img src="..." class="card-img-top" alt="..."> -->
+                    <script class='char-card' type='text/x-handlebars-template'>
+                        {{#each element}}
                     <div class="card-body player-card-body">
-                        <h5 class="card-title">Player Name(this is where we'll use handlbars) </h5>
-                        <p class="card-text">This is where we will write what the player's attack was</p>
-                        <div class="player-hp-status"></div>
-                        <!-- <div class="progress">
-                            <div class="progress-bar player-hp" role="progressbar" style="width: 25%;"
-                                aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-                        </div> -->
-                        <button type="button" name="attack" class="attack-button">Attack!</button>
+                        <h5 class="card-title">{{title}}</h5>
+                        <p class="card-text">This is where we will write what the computer's attack was</p>
+                        <div class="progress">
+                            <div class="progress-bar computer-hp" role="progressbar" style="width: 25%;" aria-valuenow="25"
+                                aria-valuemin="0" aria-valuemax="100">25%
+                            </div>
+                        </div>
+                        <button type="button" name="placeholder" class="">This is a placeholder</button>
                     </div>
-                    <button type="button" name="attack" class="attack-button">Attack!</button>
+                    {{/each}}
+                </script>
                 </div>
-            </div>
-
-            <div class="card col-12 col-md-6 text-center player-card">
-                <!-- <img src="..." class="card-img-top" alt="..."> -->
+                <div class="card col-12 col-md-4 text-center mt-4">
+                    <div id='playerCard' class="card col-12 col-md-6 text-center player-card">
+                        <script class='char-card' type='text/x-handlebars-template'>
+                    {{#each element}}
                 <div class="card-body comp-card-body">
-                    <h5 class="card-title">{{title}}</h5>
+                    <h5 class="card-title">{{element.title}}</h5>
                     <p class="card-text">This is where we will write what the computer's attack was</p>
                     <div class="progress">
                         <div class="progress-bar computer-hp" role="progressbar" style="width: 25%;" aria-valuenow="25"
-                            aria-valuemin="0" aria-valuemax="100">25%</div>
+                            aria-valuemin="0" aria-valuemax="100">25%
+                        </div>
                     </div>
-                    <button type="button" name="placeholder" class="">This is a placeholder</button>
+                    
                 </div>
-            </div>
+                {{/each}}
+            </script>
+
+                    </div>
+                    <button type="button" name="placeholder" class="attackButton">Atacc</button>
+                </div>
+                <button type="button" name="button" class="reset">Play Again</button>
+            </div> <!-- container end  -->
+
 
         </div>
         <button type="button" name="button" class="reset">Play Again</button>
-    </div> <!-- container end  -->
-
-
-    </div>
-    <button type="button" name="button" class="reset">Play Again</button>
     </div> <!-- container end -->
 
 
@@ -78,9 +84,9 @@
           <div class="progress-bar computer-hp" role="progressbar" aria-valuenow="{{playerhp}}" aria-valuemin="0" aria-valuemax="100">25%</div>
        </script>
 
+    <script src='./scripts/char-types.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     <script src="./scripts/handlebars-pg.js"> </script>
-    <script id='charList' src="./scripts/char-types.js" type='text/x-handlebars-template'> </script>
     <script src="./scripts/main.js"> </script>
 
 
