--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battle Game</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
-  </head>
+</head>
 
-  <body>
+<body>
     <header class="main-nav-bar">
         <select id='elements'>
             <option class='element' value="">Choose an element.</option>
@@ -23,8 +24,10 @@
 
     <div class="container">
         <!-- container start -->
-      <div class="row justify-content-around align-items-center player-cards">
-          <div class="card col-12 col-md-4 mt-4 text-center player-card">
+        <div class="row justify-content-around align-items-center player-cards">
+            <div class="card col-12 col-md-4 mt-4 text-center player-card">
+                <script class='char-card' type='text/x-handlebars-template'>
+                {{#each element}}
             <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top card-picture" alt="element picture">
             <div class="card-body player-card-body">
               <h5 class="card-title-one">Player Name
@@ -36,35 +39,39 @@
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="card col-12 col-md-4 text-center player-card">
-            <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top card-picture" alt="card picture">
-            <div class="card-body comp-card-body">
-              <h5 class="card-title">Computer Name
-              </h5>
-              <p class="card-text comp-status">Comp status
-              </p>
-              <div class="progress">
-                <div class="progress-bar computer-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%
-                </div>
-              </div>
+            {{/each}}
+        </script>
             </div>
-          </div>
+
+            <div class="card col-12 col-md-4 text-center player-card">
+                <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top card-picture"
+                    alt="card picture">
+                <div class="card-body comp-card-body">
+                    <h5 class="card-title">Computer Name
+                    </h5>
+                    <p class="card-text comp-status">Comp status
+                    </p>
+                    <div class="progress">
+                        <div class="progress-bar computer-hp" role="progressbar" style="width: 100%;"
+                            aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <section class="row justify-content-center reset-button">
-          <button type="button" name="attack" class="attack-button">Attack!</button>
+            <button type="button" name="attack" class="attack-button">Attack!</button>
         </section>
         <section class="row justify-content-center reset-button">
-          <button type="button" name="button" class ="reset">Play Again</button>
+            <button type="button" name="button" class="reset">Play Again</button>
         </section>
     </div> <!-- container end  -->
 
-        <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-        <script src='./scripts/char-types.js'></script>
-        <script src="./scripts/main.js"></script>
-        <script src="./scripts/handlebars-pg.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+    <script src='./scripts/char-types.js'></script>
+    <script src="./scripts/main.js"></script>
+    <script src="./scripts/handlebars-pg.js"> </script>
 
 
 </body>
