--- a/index.html
+++ b/index.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battle Game</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
+  </head>
 
-
-
-</head>
-
-<body>
-
-
+  <body>
     <header class="main-nav-bar">
         <select id='elements'>
             <option class='element' value="">Choose an element.</option>
@@ -28,62 +21,42 @@
     </header>
 
 
-    <div class="container game-container">
+    <div class="container">
         <!-- container start -->
-        <div class="row justify-content-around align-items-center player-cards">
-
-
-                <div class="card col-12 col-md-5  mt-4 text-center player-card">
-                    <!-- <img src="..." class="card-img-top" alt="..."> -->
-                    <div class="card-body player-card-body">
-                        <h5 class="card-title player-name">Player Name(this is where we'll use handlbars) </h5>
-                        <p class="card-text">This is where we will write what the player's attack was</p>
-                        <div class="player-hp-status"></div>
-                        <!-- <div class="progress">
-                            <div class="progress-bar player-hp" role="progressbar" style="width: 25%;"
-                                aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-                        </div> -->
-                        <button type="button" name="attack" class="attack-button">Attack!</button>
-                    </div>
-                    <button type="button" name="attack" class="attack-button">Attack!</button>
-                </div>
+        <div class="row align-items-center player-cards">
+          <div class="card col-12 col-md-6 text-center player-card">
+            <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top" alt="...">
+            <div class="card-body player-card-body">
+              <h5 class="card-title-one">Player Name(this is where we'll use handlbars) </h5>
+              <p class="card-text">This is where we will write what the player's attack was</p>
+              <div class="progress">
+                <div class="progress-bar player-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+              </div>
             </div>
+          </div>
 
-                <div class="card col-12 col-md-5  mt-4 text-center player-card">
-                    <!-- <img src="..." class="card-img-top" alt="..."> -->
-                    <div class="card-body comp-card-body">
-                        <h5 class="card-title">Computer Name(possibly change name depending on random #?) </h5>
-                        <p class="card-text">This is where we will write what the computer's attack was</p>
-                        <div class="progress">
-                            <div class="progress-bar computer-hp" role="progressbar" style="width: 100%;"
-                                aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
-                        </div>
-                        <button type="button" name="placeholder" class="">This is a placeholder</button>
-                    </div>
-                    <button type="button" name="placeholder" class="">This is a placeholder</button>
-                </div>
+          <div class="card col-12 col-md-6 text-center player-card">
+            <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top" alt="...">
+            <div class="card-body comp-card-body">
+              <h5 class="card-title">Computer Name(possibly change name depending on random #?) </h5>
+              <p class="card-text">This is where we will write what the computer's attack was</p>
+              <div class="progress">
+                <div class="progress-bar computer-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+              </div>
             </div>
-            <section class="row justify-content-center reset-button">
-              <button type="button" name="button" class ="col-lg-3 reset">Play Again</button>
-            </section>
-        </div> <!-- container end -->
+          </div>
 
-        <script id="player-template" type="text/x-handlebars-template">
-              <h5 class="card-title player-name">{{title}}</h5>
-            </script>
+        </div>
+        <button type="button" name="attack" class="attack-button">Attack!</button>
+        <button type="button" name="button" class ="reset">Play Again</button>
+    </div> <!-- container end  -->
 
-
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-    <script src="./scripts/handlebars-pg.js"> </script>
-    <script id='charList' src="./scripts/char-types.js" type='text/x-handlebars-template'> </script>
-    <script src="./scripts/main.js"> </script>
-
-
-
+        <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+        <script src='./scripts/char-types.js'></script>
+        <script src="./scripts/main.js"></script>
+        <script src="./scripts/handlebars-pg.js"> </script>
 
 
 </body>
 
 </html>
-
-<!--  -->
