--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top" alt="...">
             <div class="card-body player-card-body">
               <h5 class="card-title-one">Player Name(this is where we'll use handlbars) </h5>
-              <p class="card-text">This is where we will write what the player's attack was</p>
+              <p class="card-text player-status"></p>
               <div class="progress">
                 <div class="progress-bar player-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
               </div>
@@ -39,7 +39,7 @@
             <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top" alt="...">
             <div class="card-body comp-card-body">
               <h5 class="card-title">Computer Name(possibly change name depending on random #?) </h5>
-              <p class="card-text">This is where we will write what the computer's attack was</p>
+              <p class="card-text comp-status"></p>
               <div class="progress">
                 <div class="progress-bar computer-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
               </div>
