--- a/index.html
+++ b/index.html
@@ -23,32 +23,42 @@
 
     <div class="container">
         <!-- container start -->
-        <div class="row align-items-center player-cards">
-          <div class="card col-12 col-md-6 text-center player-card">
-            <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top" alt="...">
+      <div class="row justify-content-around align-items-center player-cards">
+          <div class="card col-12 col-md-4 mt-4 text-center player-card">
+            <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top card-picture" alt="element picture">
             <div class="card-body player-card-body">
-              <h5 class="card-title-one">Player Name(this is where we'll use handlbars) </h5>
-              <p class="card-text player-status"></p>
+              <h5 class="card-title-one">Player Name
+              </h5>
+              <p class="card-text player-status">Player Status
+              </p>
               <div class="progress">
-                <div class="progress-bar player-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                <div class="progress-bar player-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%
+                </div>
               </div>
             </div>
           </div>
 
-          <div class="card col-12 col-md-6 text-center player-card">
-            <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top" alt="...">
+          <div class="card col-12 col-md-4 text-center player-card">
+            <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top card-picture" alt="card picture">
             <div class="card-body comp-card-body">
-              <h5 class="card-title">Computer Name(possibly change name depending on random #?) </h5>
-              <p class="card-text comp-status"></p>
+              <h5 class="card-title">Computer Name
+              </h5>
+              <p class="card-text comp-status">Comp status
+              </p>
               <div class="progress">
-                <div class="progress-bar computer-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                <div class="progress-bar computer-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%
+                </div>
               </div>
             </div>
           </div>
-
         </div>
-        <button type="button" name="attack" class="attack-button">Attack!</button>
-        <button type="button" name="button" class ="reset">Play Again</button>
+
+        <section class="row justify-content-center reset-button">
+          <button type="button" name="attack" class="attack-button">Attack!</button>
+        </section>
+        <section class="row justify-content-center reset-button">
+          <button type="button" name="button" class ="reset">Play Again</button>
+        </section>
     </div> <!-- container end  -->
 
         <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
