--- a/index.html
+++ b/index.html
@@ -12,26 +12,33 @@
 
 <body>
     <header class="main-nav-bar">
-        <select id='elements'>
-            <option class='element' value="">Choose an element.</option>
-            <option class='element' value="water">Water</option>
-            <option class='element' value="earth">Earth</option>
-            <option class='element' value="fire">Fire</option>
-            <option class='element' value="air">Air</option>
-        </select>
+        <section id='dropdown'>
+            <section>
+                <div class='dropdown-selection'>
+                    <script type='text/x-handlebars-template' class='char-card'>
+                        {{#each element}}
+                            <img src='{{image}}' class='card-img-top card-picture' alt='{{title}}'>
+                            <h3>{{title}}
+                            </h3>
+                            <p>{{description}}
+                            </p>
+                        {{/each}}
+                    </script>
+                </div>
+            </section>
+        </section>
     </header>
 
 
     <div class="container">
         <!-- container start -->
-<<<<<<< HEAD
         <div class="row justify-content-around align-items-center player-cards">
             <div class="card col-12 col-md-4 mt-4 text-center player-card">
-                <script class='char-card' type='text/x-handlebars-template'>
+                <script id='playerCard' class='char-card' type='text/x-handlebars-template'>
                 {{#each element}}
-            <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top card-picture" alt="element picture">
+            <img src="{{image}}" class="card-img-top card-picture" alt="element picture">
             <div class="card-body player-card-body">
-              <h5 class="card-title-one">Player Name
+              <h5 class="card-title-one">{{title}}
               </h5>
               <p class="card-text player-status">Player Status
               </p>
@@ -45,8 +52,7 @@
             </div>
 
             <div class="card col-12 col-md-4 text-center player-card">
-                <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top card-picture"
-                    alt="card picture">
+                <img src="images/earth-elemental.jpeg" class="card-img-top card-picture" alt="card picture">
                 <div class="card-body comp-card-body">
                     <h5 class="card-title">Computer Name
                     </h5>
@@ -60,53 +66,6 @@
                 </div>
             </div>
         </div>
-=======
-        <div class="row align-items-center player-cards">
-
-            <div class="card col-12 col-md-4 text-center mt-4">
-                <div class="card col-12 col-md-6 text-center player-card">
-                    <script class='char-card' type='text/x-handlebars-template'>
-                        {{#each element}}
-                    <div class="card-body player-card-body">
-                        <h5 class="card-title">{{title}}</h5>
-                        <div class="progress">
-                            <div class="progress-bar computer-hp" role="progressbar" style="width: 25%;" aria-valuenow="25"
-                                aria-valuemin="0" aria-valuemax="100">25%
-                            </div>
-                        </div>
-                    </div>
-                    {{/each}}
-                </script>
-                </div>
-                <div class="card col-12 col-md-4 text-center mt-4">
-                    <div id='playerCard' class="card col-12 col-md-6 text-center player-card">
-                        <script class='char-card' type='text/x-handlebars-template'>
-                            {{#each element}}
-                        <div class="card-body player-card-body">
-                            <h5 class="card-title">{{title}}
-                            </h5>
-                            <div class="progress">
-                                <div class="progress-bar computer-hp" role="progressbar" style="width: 25%;" aria-valuenow="25"
-                                    aria-valuemin="0" aria-valuemax="100">25%
-                                </div>
-                            </div>
-                        </div>
-                        {{/each}}
-                    </script>
-
-                    </div>
-                    <button type="button" name="placeholder" class="attackButton">Atacc
-                    </button>
-                </div>
-            </div> <!-- container end  -->
-
-
-        </div>
-        <button type="button" name="button" class="reset">Play Again
-        </button>
-    </div> <!-- container end -->
-
->>>>>>> Corrected handlebars.
 
         <section class="row justify-content-center reset-button">
             <button type="button" name="attack" class="attack-button">Attack!</button>
