--- a/index.html
+++ b/index.html
@@ -11,13 +11,39 @@
 
   <body>
     <header class="main-nav-bar">
-        <select id='elements'>
-            <option class='element' value="">Choose an element.</option>
-            <option class='element' value="water">Water</option>
-            <option class='element' value="earth">Earth</option>
-            <option class='element' value="fire">Fire</option>
-            <option class='element' value="air">Air</option>
-        </select>
+
+
+      <div class="dropdown">
+        <button class="dropbtn">Dropdown</button>
+        <div class="dropdown-content">
+          <script type="text/x-handlebars-template" class ="char-card">
+            {{#each element}}
+            <div class="">
+              <img src="{{Image}}" alt="">
+              <h3>{{choiceElement}}</h3>
+              <p>{{Desciption}}</p>
+            </div>
+            {{/each}}
+            </script>
+        </div>
+      </div>
+
+      <!-- <div class="dropdown-selection">
+          <span>Choose an Element</span>
+          <div class="dropdown-content">
+            <script type="text/x-handlebars-template" class ="char-card">
+              {{#each element}}
+            <div class="">
+              <h3>{{choiceElement}}</h3>
+              <p>{{Desciption}}</p>
+              <img src="{{Image}}" alt="">
+            </div>
+            {{/each}}
+            </script>
+          </div>
+          </div> -->
+
+
     </header>
 
 
@@ -25,9 +51,9 @@
         <!-- container start -->
         <div class="row align-items-center player-cards">
           <div class="card col-12 col-md-6 text-center player-card">
-            <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top" alt="...">
+            <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top player-image" alt="...">
             <div class="card-body player-card-body">
-              <h5 class="card-title-one">Player Name(this is where we'll use handlbars) </h5>
+              <h5 class="card-title-one player-name"></h5>
               <p class="card-text player-status"></p>
               <div class="progress">
                 <div class="progress-bar player-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
@@ -36,9 +62,9 @@
           </div>
 
           <div class="card col-12 col-md-6 text-center player-card">
-            <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top" alt="...">
+            <img src="images/earth_elemental_by_stevegoad_d2pjakv.jpeg" class="card-img-top comp-image" alt="...">
             <div class="card-body comp-card-body">
-              <h5 class="card-title">Computer Name(possibly change name depending on random #?) </h5>
+              <h5 class="card-title computer-name"></h5>
               <p class="card-text comp-status"></p>
               <div class="progress">
                 <div class="progress-bar computer-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
