updated progress bar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="card-body player-card-body">
               <h5 class="card-title-one">Player Name
               </h5>
-              <div class="progress">
+              <div class="progress health-status">
                 <div class="progress-bar hp-bar player-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%
                 </div>
               </div>
@@ -43,9 +43,9 @@
           <div class="card col-12 col-md-5 mt-4 text-center player-card">
             <img src="images/water-elemental.jpeg" class="card-img-top card-picture" alt="card picture">
             <div class="card-body comp-card-body">
-              <h5 class="card-title">Computer Name
+              <h5 class="card-title-one">Computer Name
               </h5>
-              <div class="progress">
+              <div class="progress health-status">
                 <div class="progress-bar hp-bar computer-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%
                 </div>
               </div>
