--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="card col-12 col-md-5 mt-4 text-center player-card">
             <img src="images/water-elemental.jpeg" class="card-img-top card-picture" alt="element picture">
             <div class="card-body player-card-body">
-              <h5 class="card-title-one">Player Name
+              <h5 class="card-title-one">Earth Warrior
               </h5>
               <div class="progress health-status">
                 <div class="progress-bar hp-bar player-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%
@@ -41,9 +41,9 @@
             </div>
           </div>
           <div class="card col-12 col-md-5 mt-4 text-center player-card">
-            <img src="images/water-elemental.jpeg" class="card-img-top card-picture" alt="card picture">
+            <img src="images/wind-elemental.jpeg" class="card-img-top card-picture" alt="card picture">
             <div class="card-body comp-card-body">
-              <h5 class="card-title-one">Computer Name
+              <h5 class="card-title-one">Wind Warrior
               </h5>
               <div class="progress health-status">
                 <div class="progress-bar hp-bar computer-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%
