--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="card col-12 col-md-5 mt-4 text-center player-card">
             <img src="images/wind-elemental.jpeg" class="card-img-top card-picture comp-image" alt="card picture">
             <div class="card-body comp-card-body">
-              <h5 class="card-title-one"></h5>
+              <h5 class="card-title-one comp-name"></h5>
               <div class="progress health-status">
                 <div class="progress-bar hp-bar computer-hp" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%
                 </div>
